live/environments/lab/cluster/percona/ing-grpc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    # nginx.ingress.kubernetes.io/proxy-buffer-size: "1024k"
  name: pmm-grpc
spec:
  ingressClassName: nginx
  rules:
  - host: pmm-dev.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: monitoring-service-grpc
            port:
              number: 443
      # - pathType: Prefix
        # path: /agent.
        # backend:
          # service:
            # name: monitoring-service-grpc
            # port:
              # number: 443
      # - pathType: Prefix
        # path: /inventory.
        # backend:
          # service:
            # name: monitoring-service-grpc
            # port:
              # number: 443
      # - pathType: Prefix
        # path: /management.
        # backend:
          # service:
            # name: monitoring-service-grpc
            # port:
              # number: 443
      # - pathType: Prefix
        # path: /server.
        # backend:
          # service:
            # name: monitoring-service-grpc
            # port:
              # number: 443
      # - pathType: Prefix
        # path: /victoriametrics
        # backend:
          # service:
            # name: monitoring-service-grpc
            # port:
              # number: 443
      # - pathType: Prefix
        # path: /v1
        # backend:
          # service:
            # name: monitoring-service-grpc
            # port:
              # number: 443
  tls:
  - hosts:
    - pmm-dev.medimpact.com
