live/environments/lab/cluster/percona/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.pmm.tcp80
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 80
        protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pmm
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.pmm.tcp443
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 443
        protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pmm
  policyTypes:
  - Ingress
